# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/scripts/: brain-calc.py  brain-even.py  brain_games.py
natasha2202_brain_games.egg-info/: PKG-INFO  SOURCES.txt
