[tool.poetry]
name = "Natasha2202_brain_games"
version = "0.1.1"
description = ""
authors = ["Natasha <sterh5@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain_games.scrips.brain_calc.main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

